# agent-python-pytest

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev-bdd.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tests.yml
.tox/python/: .tox-config1  pip-selfcheck.json
examples/: __init__.py  test_in_class_in_class.py  test_in_class_parameterized.py  test_issue_id.py  test_issue_id_pass.py  test_max_item_name.py  test_rp_custom_logging.py  test_rp_logging.py  test_simple.py  test_simple_fail.py  test_simple_skip.py  test_skip_simple.py
examples/attributes/: test_one_attribute.py  test_runtime_attribute.py  test_two_attributes_with_same_key.py
examples/custom_name/: test_custom_name_args.py  test_custom_name_empty.py  test_custom_name_kwargs.py
examples/empty/: README.txt
examples/hierarchy/: test_in_class.py
examples/skip/: __init__.py  (+2 more)
patches/: 0001-fix-detect-pytest-bdd-scenario-module-path-on-Window.patch
pytest_reportportal/: __init__.py  config.py  config.pyi  errors.py  helpers.py  listener.py  plugin.py  plugin.pyi  pytest_rp_logger.py  pytest_rp_plugin.py  rp_logging.py  service.py  service.pyi  thread_monkey_patch.py  thread_nested_steps_classes.py
pytest_reportportal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_fix1.py  test_fix2.py  test_helpers.py  test_listener.py  test_plugin.py  test_service.py
(+132 files in other folders)
