[build-system]
requires = [
  # sync with setup.py until we discard non-pep-517/518
  "setuptools>=68.0.0",
  "setuptools-scm",
  "wheel==0.40.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
py_version=310
line_length = 119
profile = "black"
skip_gitignore = true

[tool.black]
line-length = 119
target-version = ["py310"]
